<resources>
    <string name="app_name" translatable="false">TU Find</string>
    <string name="error_gif" translatable="false">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="LAWS">Faculty of Law</string>
    <string name="TBS">Faculty of Commerce and Accountancy</string>
    <string name="ECON">Faculty of Economics</string>
    <string name="SW">Faculty of Social Administration</string>
    <string name="SA">Faculty of Sociology and Anthropology</string>
    <string name="ARTS">Faculty of Liberal Arts</string>
    <string name="JC">Faculty of Journalism and Mass Communication</string>
    <string name="TSE">Faculty of Engineering</string>
    <string name="SIIT">Sirindhorn International Institute of Technology</string>
    <string name="TDS">Faculty of Architecture and Planning</string>
    <string name="LSED">Faculty of Learning Sciences and Education</string>
    <string name="FINEART">Faculty of Arts</string>
    <string name="KNK">Kunakorn Building</string>
    <string name="PYC">(Co-Operative Lerning Center) Piyachart Building</string>
    <string name="PYC2">(Co-Operative Lerning Center 2) Piyachart Building 2</string>
    <string name="LITU">Language Institute</string>
    <string name="SC1">Social Complex Building (SC)</string>
    <string name="SC2">Social Complex Building 2 (SC.2)</string>
    <string name="SC3">Social Complex Building 3 (SC.3)</string>
    <string name="LC1">Lecture Classroom 1 (LC.1)</string>
    <string name="LC2">Lecture Classroom 2 (LC.2)</string>
    <string name="LC3">Lecture Classroom 3 (LC.3)</string>
    <string name="LC4">Lecture Classroom 4 (LC.4)</string>
    <string name="LC5">Lecture Classroom 5 (LC.5)</string>
    <string name="find_txt">FIND A BUILDING</string>
    <string name="history_txt">HISTORY</string>
    <string name="chart_txt">TOP FINDING BUILDING IN TUFIND</string>
    <string name="upload_txt">UPLOAD PICTURES</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="find">FIND</string>
    <string name="show_chart">SHOW CHART</string>
    <string name="clear_txt">CLEAR</string>
    <string name="upload_txt1">UPLOAD</string>
    <string name="status_2">uploading...</string>
    <string name="menu_1">Find</string>
    <string name="menu_2">History</string>
    <string name="menu_3">Statistic</string>
    <string name="menu_4">Upload</string>
    <string name="menu_5">Login</string>
    <string name="status_1">uploaded</string>
    <string name="spinner_txt">Select Building or Location</string>
    <string name="selected_txt">Selected Pictures</string>
    <string name="admin">Admin</string>
    <string name="create_account">Create Account</string>
    <string name="signinGoogle">SIGN IN WITH GOOGLE</string>
    <string name="username">Username</string>
    <string name="logout">logout</string>
    <string name="password">Password</string>
    <string name="profile">PROFILE</string>
    <string name="e_mail">E-mail</string>
    <string name="download">download</string>
    <string name="building">Building</string>
    <string name="total">Totals</string>
    <string name="nearplace">Nearby Place</string>
    <string name="all">All</string>
    <string name="busline">Bus\'s Line</string>
    <string name="busDetail">Bus\'s Detail</string>
    <string name="moreDetail">More Detail</string>
    <string name="enter1">Enter Name of Nearby Place</string>
    <string name="enter2">Enter Detail of Nearby Place</string>
    <string name="Map">Map</string>
</resources>