<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".ChartActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f6e56f"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/hamBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@null"
            android:src="@drawable/ic_baseline_menu_24" />

        <ImageButton
            android:id="@+id/btprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:src="@drawable/ic_userprofile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="304dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TU FIND"
                android:textColor="#b53b21"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/chart_txt"
            android:textColor="#000000"
            android:textStyle="bold" />

        <com.anychart.AnyChartView
            android:id="@+id/any_chart_view"
            android:layout_width="match_parent"
            android:layout_height="502dp" />

        <Button
            android:id="@+id/showBtn"
            android:layout_width="361dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_find"
            android:elevation="15dp"
            android:text="@string/show_chart"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/showMoreBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>