<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_profil1">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f6e56f"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/btphome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@null"
            android:src="@drawable/ic_house" />

<!--        <ImageButton-->
<!--            android:id="@+id/btphome"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="right"-->
<!--            android:layout_marginTop="13dp"-->
<!--            android:layout_marginEnd="18dp"-->
<!--            android:background="@null"-->
<!--            android:src="@drawable/ic_house" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="304dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TU FIND"
                android:fontFamily="@font/convergence"
                android:textColor="#b53b21"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/kanit"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:text="@string/profile"
        android:textColor="#2f2f2f"
        android:textSize="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="20dp"
        android:fontFamily="@font/kanit"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/username" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/kanit"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametext"/>

    <TextView
        android:id="@+id/passtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kanit"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtext"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/checkpasstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/kanit"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtext">
    </TextView>


    <Button
        android:id="@+id/buttonrofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="20dp"
        android:textSize="18dp"
        android:fontFamily="@font/kanit"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkpasstext"
        android:background="@drawable/buttonprofile_bg"
        android:textColor="#2f2f2f" />


<!--        <Button-->
<!--            android:id="@+id/registerBtn"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="Create Account"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/isStudent"-->
<!--            android:ems="10"-->
<!--            app:layout_constraintWidth_percent=".85"-->
<!--            android:background="@drawable/buttonlogin_bg"-->
<!--            android:textColor="@color/white"/>-->

</LinearLayout>